gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue22682.d
version https://git-lfs.github.com/spec/v1
oid sha256:c050605db2a53062f89e81a973bfc1c8a2041aa9988737ba8d72b07c7f39b14a
size 701
